--- a/components/mediation-admin/org.wso2.carbon.message.store/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.message.store/pom.xml
@@ -53,7 +53,7 @@
             <artifactId>org.wso2.carbon.service.mgt</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
         </dependency>
         <dependency>
