--- a/components/mediation-config-admin/org.wso2.carbon.mediation.configadmin.ui/pom.xml
+++ b/components/mediation-config-admin/org.wso2.carbon.mediation.configadmin.ui/pom.xml
@@ -70,7 +70,7 @@
             <artifactId>axis2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
         </dependency>
         <dependency>
