--- a/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.kerberos.ui/pom.xml
+++ b/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.kerberos.ui/pom.xml
@@ -74,7 +74,7 @@
             <artifactId>org.wso2.carbon.mediator.service</artifactId>
         </dependency>        
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
         </dependency>
     </dependencies>
