--- a/components/mediation-ui/org.wso2.carbon.message.processor.ui/pom.xml
+++ b/components/mediation-ui/org.wso2.carbon.message.processor.ui/pom.xml
@@ -82,7 +82,7 @@
             <artifactId>synapse-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
         </dependency>
         <dependency>
