--- a/service-stubs/mediation-cg/pom.xml
+++ b/service-stubs/mediation-cg/pom.xml
@@ -84,7 +84,7 @@
             <version>${orbit.version.xmlschema}</version>
         </dependency>
         <dependency>
-            <groupId>org.ops4j.pax.logging</groupId>
+            <groupId>org.wso2.org.ops4j.pax.logging</groupId>
             <artifactId>pax-logging-api</artifactId>
             <version>${pax.logging.api.version}</version>
         </dependency>
