--- a/pom.xml
+++ b/pom.xml
@@ -2424,6 +2424,12 @@
                 <artifactId>vault-java-driver</artifactId>
                 <version>${hashicorp.vault.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.openjdk.nashorn</groupId>
+                <artifactId>openjdk-nashorn</artifactId>
+                <version>${openjdk.nashorn.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <properties>
@@ -2623,6 +2629,7 @@
         <jackson.dataformat.yaml.version>2.10.3</jackson.dataformat.yaml.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <snakeyaml.version>1.25</snakeyaml.version>
+        <openjdk.nashorn.version>15.3.wso2v1</openjdk.nashorn.version>
     </properties>
     <pluginRepositories>
         <pluginRepository>
