--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
                 <module>components/mediators</module>
                 <module>components/event-sink</module>
                 <module>components/mediation-ui</module>
+                <module>components/mediation-ntask</module>
                 <module>components/inbound-endpoints</module>
                 <module>components/application-deployers</module>
                 <module>components/application-mgt</module>
@@ -508,10 +509,6 @@
                     <exclusion>
                         <groupId>org.ops4j.pax.logging</groupId>
                         <artifactId>pax-logging-api</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.wso2.orbit.com.hazelcast</groupId>
-                        <artifactId>hazelcast</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
