--- a/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.publishevent.ui/pom.xml
+++ b/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.publishevent.ui/pom.xml
@@ -115,5 +115,9 @@
             <groupId>org.wso2.carbon.mediation</groupId>
             <artifactId>org.wso2.carbon.mediator.publishevent</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.corba</groupId>
+            <artifactId>glassfish-corba-omgapi</artifactId>
+        </dependency>
     </dependencies>
 </project>
