--- a/components/mediators/datamapper/org.wso2.carbon.mediator.datamapper.engine/pom.xml
+++ b/components/mediators/datamapper/org.wso2.carbon.mediator.datamapper.engine/pom.xml
@@ -98,5 +98,13 @@
             <groupId>net.sf.saxon.wso2</groupId>
             <artifactId>saxon</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.nashorn</groupId>
+            <artifactId>nashorn-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.bsf.wso2</groupId>
+            <artifactId>bsf-all</artifactId>
+        </dependency>
     </dependencies>
 </project>
