Add log service for synapse to bridge synpase and kernel

--- a/components/mediation-commons/pom.xml
+++ b/components/mediation-commons/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>synapse-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
             <scope>provided</scope>
