Add pass through control frames support

--- a/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
+++ b/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint/pom.xml
@@ -120,6 +120,7 @@
                         <Bundle-Name>${project.artifactId}</Bundle-Name>
                         <Export-Package>
                             org.wso2.carbon.inbound.endpoint.protocol.websocket,
+                            org.wso2.carbon.inbound.endpoint.protocol.websocket.management,
                             org.wso2.carbon.inbound.endpoint.protocol.http.management,
                             org.wso2.carbon.inbound.endpoint.protocol.http.multitenancy,
                             org.wso2.carbon.inbound.endpoint.protocol.generic,
