--- a/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
+++ b/components/mediation-initializer/org.wso2.carbon.mediation.transport.handlers/pom.xml
@@ -80,7 +80,7 @@
             <artifactId>synapse-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.orbit.org.yaml</groupId>
+            <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
         <dependency>
