--- a/features/mediation-initializer-features/org.wso2.carbon.mediation.initializer.server.feature/pom.xml
+++ b/features/mediation-initializer-features/org.wso2.carbon.mediation.initializer.server.feature/pom.xml
@@ -54,7 +54,7 @@
             <type>zip</type>
         </dependency>
         <dependency>
-            <groupId>org.wso2.orbit.org.yaml</groupId>
+            <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
         <dependency>
