--- a/pom.xml
+++ b/pom.xml
@@ -2376,7 +2376,7 @@
                 <version>${google.guava.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.orbit.org.yaml</groupId>
+                <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>${orbit.version.snakeyaml}</version>
             </dependency>
@@ -2526,7 +2526,7 @@
         <carbon.registry.version>4.7.24</carbon.registry.version>
         <carbon.registry.imp.pkg.version>[4.7.0, 5.0.0)</carbon.registry.imp.pkg.version>
         <!-- Analytic Commons version-->
-        <carbon.analytics.common.version>5.2.18</carbon.analytics.common.version>
+        <carbon.analytics.common.version>5.3.6</carbon.analytics.common.version>
         <carbon.analytics.common.imp.pkg.version>[5.2.0, 6.0.0)</carbon.analytics.common.imp.pkg.version>
         <!-- carbon.identity.framework.version-->
         <carbon.identity.framework.version>5.15.17</carbon.identity.framework.version>
@@ -2638,7 +2638,7 @@
         <saxon.wso2.version>8.9.0.wso2v2</saxon.wso2.version>
         <json.smart.version>2.4.7</json.smart.version>
         <damnhandy.version>2.1.6.wso2v2</damnhandy.version>
-        <netty.version>4.1.100.Final</netty.version>
+        <netty.version>4.1.104.Final</netty.version>
         <netty.tcnative.version>2.0.47.Final</netty.tcnative.version>
         <javax.activation.version>0.0</javax.activation.version>
         <javax.servlet.imp.pkg.version>[2.4.0, 3.0.0)</javax.servlet.imp.pkg.version>
@@ -2652,7 +2652,7 @@
         <fge.json.schema.validator.version>2.2.6.wso2v8</fge.json.schema.validator.version>
         <com.googlecode.libphonenumber.version>7.4.2.wso2v1</com.googlecode.libphonenumber.version>
         <joda-time.version>2.9.4.wso2v1</joda-time.version>
-        <google.guava.version>32.1.3-jre</google.guava.version>
+        <google.guava.version>33.0.0-jre</google.guava.version>
         <!-- publishEvent mediator versions -->
         <javax.xml.namespace.version>0.0.0</javax.xml.namespace.version>
         <org.apache.axiom.om.version>0.0.0</org.apache.axiom.om.version>
@@ -2662,13 +2662,13 @@
         <jetty.wso2.version>8.1.17.v20150415.wso2v1</jetty.wso2.version>
         <libthrift.version>0.16.0.wso2v1</libthrift.version>
         <opencsv.version>2.3</opencsv.version>
-        <fasterxml.jackson.version>2.14.1</fasterxml.jackson.version>
+        <fasterxml.jackson.version>2.16.1</fasterxml.jackson.version>
         <json.simple.version>1.1.1</json.simple.version>
         <esotericsoftware.kryo.version>3.0.3</esotericsoftware.kryo.version>
         <org.objenesis.version>2.1</org.objenesis.version>
         <esotericsoftware.minlog.version>1.3.0</esotericsoftware.minlog.version>
-        <orbit.version.snakeyaml>1.33.0.wso2v1</orbit.version.snakeyaml>
-        <orbit.snakeyaml.import.version.range>[1.16.0.wso2v1, 2.0.0)</orbit.snakeyaml.import.version.range>
+        <orbit.version.snakeyaml>2.0</orbit.version.snakeyaml>
+        <orbit.snakeyaml.import.version.range>[2.0, 3.0.0)</orbit.snakeyaml.import.version.range>
         <!-- OWASP encoder versions -->
         <owasp.encoder.wso2.version>1.2.0.wso2v1</owasp.encoder.wso2.version>
         <owasp.encoder.wso2.imp.pkg.version>[1.2.0,1.3.0)</owasp.encoder.wso2.imp.pkg.version>
@@ -2690,15 +2690,14 @@
         <maven.bundle.plugin.version>3.3.0</maven.bundle.plugin.version>
         <saml.common.util.version>1.3.0</saml.common.util.version>
         <opensaml.orbit.version>3.3.1.wso2v4</opensaml.orbit.version>
-        <jackson.dataformat.yaml.version>2.10.3</jackson.dataformat.yaml.version>
+        <jackson.dataformat.yaml.version>2.16.1</jackson.dataformat.yaml.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
-        <snakeyaml.version>1.33</snakeyaml.version>
         <glassfish.cobra.version>4.2.1</glassfish.cobra.version>
         <nashorn.core.version>15.4</nashorn.core.version>
         <bsf.version>3.0.0.wso2v5</bsf.version>
         <powermock.version>2.0.9</powermock.version>
         <!-- OAS3 Versions -->
-        <swagger.parser.orbit.version>2.0.20.wso2v1</swagger.parser.orbit.version>
+        <swagger.parser.orbit.version>2.1.18.wso2v1</swagger.parser.orbit.version>
         <transport.http.netty>6.3.35</transport.http.netty>
     </properties>
     <pluginRepositories>
