--- a/components/mediators/datamapper/org.wso2.carbon.mediator.datamapper/pom.xml
+++ b/components/mediators/datamapper/org.wso2.carbon.mediator.datamapper/pom.xml
@@ -67,5 +67,9 @@
             <groupId>org.wso2.carbon.mediation</groupId>
             <artifactId>org.wso2.carbon.mediator.datamapper.engine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+        </dependency>
     </dependencies>
 </project>
