--- a/components/business-adaptors/hl7/org.wso2.carbon.business.messaging.hl7.store/pom.xml
+++ b/components/business-adaptors/hl7/org.wso2.carbon.business.messaging.hl7.store/pom.xml
@@ -79,6 +79,15 @@
                             org.wso2.carbon.utils.*,
                             *;resolution:=optional
                         </Import-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseConfigurationService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseEnvironmentService,
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseRegistrationsService,
+                            osgi.service;objectClass=org.wso2.carbon.service.mgt.ServiceAdmin,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.dependency.mgt.services.DependencyManagementService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
