--- a/components/carbon-mediation-startup/org.wso2.carbon.mediation.startup/pom.xml
+++ b/components/carbon-mediation-startup/org.wso2.carbon.mediation.startup/pom.xml
@@ -87,6 +87,10 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseEnvironmentService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseRegistrationsService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
