--- a/components/carbon-transports/websocket/org.wso2.carbon.websocket.transport/pom.xml
+++ b/components/carbon-transports/websocket/org.wso2.carbon.websocket.transport/pom.xml
@@ -48,6 +48,9 @@
                             org.osgi.framework,
                             *;resolution:=optional
                         </Import-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
