--- a/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
@@ -77,6 +77,11 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService,
+                            osgi.service;objectClass=org.wso2.carbon.base.api.ServerConfigurationService,
+                            osgi.service;objectClass=org.wso2.carbon.securevault.SecretCallbackHandlerService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
