--- a/components/mediation-admin/org.wso2.carbon.mediator.service/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.mediator.service/pom.xml
@@ -54,6 +54,9 @@
                             org.wso2.carbon.registry.core.service; version="${carbon.kernel.registry.imp.pkg.version}",
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.mediator.service.MediatorService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
