--- a/components/mediation-admin/org.wso2.carbon.message.store/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.message.store/pom.xml
@@ -114,6 +114,15 @@
                             org.wso2.carbon.message.store.service.*,
                             org.wso2.carbon.message.store.util.*
                         </Private-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseConfigurationService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseEnvironmentService,
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseRegistrationsService,
+                            osgi.service;objectClass=org.wso2.carbon.service.mgt.ServiceAdmin,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.dependency.mgt.services.DependencyManagementService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
