--- a/components/mediation-admin/org.wso2.carbon.task/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.task/pom.xml
@@ -96,6 +96,12 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.task.services.JobMetaDataProviderService,
+                            osgi.service;objectClass=org.wso2.carbon.task.services.TaskDescriptionRepositoryService,
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.apache.synapse.task.service.TaskManagementService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
