--- a/components/mediation-registry/org.wso2.carbon.mediation.registry/pom.xml
+++ b/components/mediation-registry/org.wso2.carbon.mediation.registry/pom.xml
@@ -65,6 +65,9 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
