--- a/components/mediators/event/org.wso2.carbon.mediator.event/pom.xml
+++ b/components/mediators/event/org.wso2.carbon.mediator.event/pom.xml
@@ -56,6 +56,9 @@
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                         <Fragment-Host>synapse-core</Fragment-Host>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.event.core.EventBroker
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
