Add changes for https://github.com/wso2/api-manager/issues/2943

--- a/components/application-deployers/org.wso2.carbon.application.deployer.synapse/pom.xml
+++ b/components/application-deployers/org.wso2.carbon.application.deployer.synapse/pom.xml
@@ -64,6 +64,9 @@
                             *;resolution:=optional
                         </Import-Package>
                         <WSO2-Application-Deployer>Synapse App Deployer</WSO2-Application-Deployer>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseEnvironmentService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
