--- a/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint.osgi/pom.xml
+++ b/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint.osgi/pom.xml
@@ -28,6 +28,9 @@
                         </Import-Package>
                         <DynamicImport-Package>*
                         </DynamicImport-Package> <!-- TODO: remove this after adding all imports-->
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
