--- a/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint.persistence/pom.xml
+++ b/components/inbound-endpoints/org.wso2.carbon.inbound.endpoint.persistence/pom.xml
@@ -55,6 +55,10 @@
                         </Import-Package>
                         <DynamicImport-Package>*
                         </DynamicImport-Package> <!-- TODO: remove this after adding all imports-->
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService,
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
