--- a/components/mediation-initializer/org.wso2.carbon.mediation.light.initializer/pom.xml
+++ b/components/mediation-initializer/org.wso2.carbon.mediation.light.initializer/pom.xml
@@ -121,6 +121,14 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.wso2.carbon.task.services.TaskDescriptionRepositoryService,
+                            osgi.service;objectClass=org.wso2.carbon.task.services.TaskSchedulerService,
+                            osgi.service;objectClass=org.wso2.carbon.securevault.SecretCallbackHandlerService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.ntask.internal.NtaskService,
+                            osgi.service;objectClass=org.wso2.carbon.inbound.endpoint.persistence.service.InboundEndpointPersistenceService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
