--- a/components/mediation-ntask/pom.xml
+++ b/components/mediation-ntask/pom.xml
@@ -80,6 +80,11 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.ntask.core.service.TaskService,
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.wso2.carbon.user.core.service.RealmService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
