--- a/components/mediators/bam/org.wso2.carbon.mediator.bam.config/pom.xml
+++ b/components/mediators/bam/org.wso2.carbon.mediator.bam.config/pom.xml
@@ -52,6 +52,9 @@
                             org.osgi.service.component.*;version="${imp.package.version.osgi.services}",
                             *;resolution:=optional
                         </Import-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.registry.core.service.RegistryService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
