--- a/components/org.wso2.carbon.integrator.core/pom.xml
+++ b/components/org.wso2.carbon.integrator.core/pom.xml
@@ -98,6 +98,10 @@
                             org.wso2.carbon.utils;version="${carbon.kernel.imp.pkg.version}"
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.utils.ConfigurationContextService,
+                            osgi.service;objectClass=org.wso2.carbon.tomcat.api.CarbonTomcatService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
