--- a/components/mediation-admin/org.wso2.carbon.localentry/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.localentry/pom.xml
@@ -110,6 +110,9 @@
                             javax.xml.soap; version="${javax.xml.soap.imp.pkg.version}",
                             *;resolution:=optional
                         </Import-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.localentry.service.LocalEntryAdmin
+                        </Provide-Capability>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
