--- a/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.mediation.security/pom.xml
@@ -77,6 +77,9 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.mediation.security.vault.MediationSecurityAdminService
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
