--- a/components/mediation-admin/org.wso2.carbon.rest.api/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.rest.api/pom.xml
@@ -96,6 +96,9 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.rest.api.service.RestApiAdmin
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
