--- a/components/mediation-initializer/org.wso2.carbon.mediation.initializer/pom.xml
+++ b/components/mediation-initializer/org.wso2.carbon.mediation.initializer/pom.xml
@@ -114,6 +114,11 @@
                             *;resolution:=optional
                         </Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
+                        <Provide-Capability>
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseConfigurationService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseEnvironmentService,
+                            osgi.service;objectClass=org.wso2.carbon.mediation.initializer.services.SynapseRegistrationsService,
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
